Bug 447290 - Tag colors do not appear in contextual menu
Summary: Tag colors do not appear in contextual menu
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL: https://github.com/amyspark/gmic/comm...
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-20 14:43 UTC by David Tschumperlé
Modified: 2021-12-24 11:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
G'MIC 3.0 on Krita, contextual menu for adding tags. (247.46 KB, image/jpeg)
2021-12-20 14:43 UTC, David Tschumperlé
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Tschumperlé 2021-12-20 14:43:23 UTC
Created attachment 144718 [details]
G'MIC 3.0 on Krita, contextual menu for adding tags.

SUMMARY
***
In G'MIC 3.0 plug-in for Krita, there is now a "filter tagging" system : a color tag can be associated to a filter, using the contextual menu displaying when right-clicking on a filter name (in the filter tree widget).

This is how it looks in GIMP : 

https://gmic.eu/gmic300/fullsize/gmic_qt_tags.gif

When testing on Krita, colors do not appear in the contextual menu (see attached screenshot).
Not a big deal since colored tag appear near the filter anyway.
Maybe some icons are missing ?
Comment 1 Halla Rempt 2021-12-20 15:55:36 UTC
That's probably because on most platforms we disable icons in menus because they are distracting. If you implemented this as a menu icon instead of using a custom delegate, the colors will be missing.
Comment 2 amyspark 2021-12-21 16:46:30 UTC
This can (thankfully) be overridden via QAction's setIconVisibleInMenu. Scheduled it for the next patch rollup.
Comment 3 Bug Janitor Service 2021-12-23 17:19:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1255
Comment 4 amyspark 2021-12-24 11:33:05 UTC
Git commit 0aced718ebe7845d26e4a881f0ef6cc139c6abe5 by L. E. Segovia.
Committed on 24/12/2021 at 11:30.
Pushed by lsegovia into branch 'master'.

Update G'MIC to 3.0.0 patch 2
Related: bug 447286

M  +2    -2    3rdparty_plugins/ext_gmic/CMakeLists.txt

https://invent.kde.org/graphics/krita/commit/0aced718ebe7845d26e4a881f0ef6cc139c6abe5
Comment 5 amyspark 2021-12-24 11:39:14 UTC
Git commit 25f67fc173b3d425113bea67a46078dbd9b59a3c by L. E. Segovia.
Committed on 24/12/2021 at 11:33.
Pushed by lsegovia into branch 'krita/5.0'.

Update G'MIC to 3.0.0 patch 2
Related: bug 447286
(cherry picked from commit 0aced718ebe7845d26e4a881f0ef6cc139c6abe5)

M  +2    -2    3rdparty_plugins/ext_gmic/CMakeLists.txt

https://invent.kde.org/graphics/krita/commit/25f67fc173b3d425113bea67a46078dbd9b59a3c