Fix Qt::AA_DontShowIconsInMenus removing tag icons on hosted plugins

BUG: 447290